--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -69,6 +69,9 @@ body {
 	flex: 1 1 auto;
 	margin-top: 118px;
 	transition: filter 0.3s;
+	@media screen and (max-width: 560px) {
+		margin-top: 66px;
+	}
 }
 .container {
 	width: 1280px;
